[package]
name = "tree-sitter-flint"
description = "A fast and pipeline-oriented language for systems scripts"
version = "0.1.0"
authors = ["lucaas-d3v <lucas.workps@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "flint"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lucaas-d3v/flint"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
